<resources>

    <string name="vkontakte">Vk</string>
    <string name="vk_app_id" translatable="false">5568724</string>
    <integer name="com_vk_sdk_AppId">5568724</integer>
    <string name="facebook_app_id" translatable="false">1234795546584699</string>
    <string name="facebook">Fb</string>


    <string name="app_name">Resume Designer</string>
    <string name="auth_enter_tv">Send a post to wall</string>
    <string name="auth_fill_tv">Fill a resume</string>
    <string name="fill_tv">Start</string>
    <string name="username_hint">Name and Surname</string>
    <string name="nick_hint">Objective</string>
    <string name="tel_hint">Telephone number</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="bio_hint">About (up to 200 symbols)</string>
    <string name="skills">For example: MS office/3, Photoshop/4</string>
    <string name="languages_hint">Languages "\n" enter languages separated by commas</string>
    <string name="lang_hint">For example: English: Fluent, Russian: Intermediate</string>
    <string name="hobby_hint">Hobby "\n" enter hobbies separated by commas</string>
    <string name="hob_hint">For example: Origami, Hockey</string>
    <string name="job_period_hint">Period</string>
    <string name="company_title_hint">Company name</string>
    <string name="company_title">For example: Microsoft</string>
    <string name="job_title_hint">Occupied position</string>
    <string name="job_title">For example: Sales manager</string>
    <string name="jb_duty_hint">Responsibilities "\n" Please mention core responsibilities(2-3)"\n" enter responsibilities separated by commas</string>
    <string name="job_duty">For example: staff management, optimization of costs</string>
    <string name="job_add">+ work place</string>
    <string name="study_title_hint">Place of study</string>
    <string name="study_title">For example: MSU(2011–2015)</string>
    <string name="study_description_hint">Description</string>
    <string name="study_description">For example: Bachelor. Sociology</string>
    <string name="rating_hint">Average score</string>
    <string name="rating_value">For example: 8.67 of 10</string>
    <string name="achievements_hint">Achievements "\n" Please mention core achievements(2-3)"\n" enter your achievements separated by commas</string>
    <string name="achievements">For example: Contest winner, publication of scientific articles</string>
    <string name="unblock">Unlock"\n"pdf</string>
    <string name="create_pdf">Create"\n"pdf</string>
    <string name="study_add">+ Place of study</string>
    <string name="view">Review"\n"pdf</string>
    <string name="add_photo">Add photo</string>
    <string name="change_photo">Change photo</string>
    <string name="from_cam">From camera</string>
    <string name="form_gallery">From gallery</string>
    <string name="user_profile_choose_picture">сhoose picture</string>
    <string name="jobs">Places of work</string>
    <string name="studies">Places of study</string>
    <string name="job_remove">- place of work</string>
    <string name="study_remove">- place of study</string>
    <string name="load_from_camera_permissions_request">For correct work of the application the required permissions should be given</string>
    <string name="load_authorization_request">Necessary to send a post on the wall in the social network OR get a premium</string>
    <string name="nick_hint2">Foe example: Sales manager</string>
    <string name="job_period">For example: 09/2015–12/2015</string>
    <string name="sharePdf">Send"\n"pdf</string>
    <string name="jobs2">Place of work 2</string>
    <string name="jobs3">Place of work 3</string>
    <string name="study2">Place of study 2</string>
    <string name="auth_full_func_tv">Unlock pdf</string>
    <string name="auth_premium_tv">Get a premium</string>
    <string name="or_tv">OR</string>
    <string name="premium">Premium</string>
    <string name="first_work">I am looking for the first job</string>
    <string name="jobs1">Place of work 1</string>
    <string name="hr">Order resume from"\n" HR experts</string>
    <string name="reedem_consultation">Get a recruiter consultation</string>
    <string name="thanks_for_premium">Thank you for getting premium status!</string>
    <string name="best_service">Together with HR24 experts  @hr24family I create  an amazing resume. Visit hr24.org and download app for Android</string>
    <string name="thanks">Thank you! PDF is unlocked!</string>
    <string name="cancelled">You cancelled post publication</string>
    <string name="posting_error">Post publication failed</string>
    <string name="loading_social">Loading social network</string>
    <string name="wrong_id">Wrong networkId</string>
    <string name="network_unreachable">The network is not available, try again later</string>
    <string name="professional_resume">Professional resumer order</string>
    <string name="error">"Error: "</string>
    <string name="unblock_functionality">Unlock functionality</string>
    <string name="create_pdf_first">Firstly create pdf</string>
    <string name="apps_are_not_installed">No application installed to view pdf</string>
    <string name="share_dialogue">Choose where to send resume file:</string>
    <string name="sharing_app_are_not_installed">No application installed for file sending.Try Dropbox, for example.</string>
    <string name="cv_wihout_photo">Resume without photo, until you add a photo from gallery or take a picture.</string>
    <string name="job_experience">Work experience</string>
    <string name="education">Education</string>
    <string name="achievements_header">Achievements</string>
    <string name="bio_header">About</string>
    <string name="skills_header">Skills</string>
    <string name="check_if_the_skills_is_correct">Check entry of your skills</string>
    <string name="another_info">Other information</string>
    <string name="languages">Languages</string>
    <string name="hobby_header">Hobby</string>
    <string name="document_created">Document is created.</string>
    <string name="insert_sd">Insert memory card</string>
    <string name="allow">Allow</string>
    <string name="error_capturing_photo">Getting photo error</string>
    <string name="granted">Permission is received</string>


    <string name="query_inventory_finished">Query inventory finished.</string>
    <string name="query_inventory_failed">"Failed to query inventory: "</string>
    <string name="another_async_task">Error querying inventory. Another async operation in progress. </string>
    <string name="error_launching">Error launching purchase flow. Another async operation in progress.</string>
    <string name="error_purchasing">"Error purchasing: "</string>
    <string name="authentity_failed">Error purchasing. Authenticity verification failed.</string>
    <string name="chose_an_app_to_call">Choose an app for call:</string>


    <string name="google_play_purchasing">Purchasing on Google Play for the first time includes checksum cancellation, returned to Your account afterwards."\n" Thus if You purchase for the first time - the sum may be slightly more. "\n"It is the Google policy, which does not depend on us.</string>
    <string name="read_carefully">Read attentively</string>
    <string name="thank_yuo">Thank you!</string>
    <string name="pdf_unblocked">We thank You for getting the premium status! "\n" PDF is unblocked</string>
    <string name="return_back">Return</string>
    <string name="setting_up_problem">"Problem setting up in-app billing: "</string>
    <string name="skills_hint">Skills  "\n" Please mention core skills(2-3)"\n" Note: Photoshop/3, Another skill "\n" \"Photoshop\" - Name of skill "\n" Number after is\"/\" - rating from 1 to 5 "\n"enter your sills separated by commas</string>
    <string name="or_lowercase_tv">or</string>
    <string name="russian_cv">Ваше резюме будет создано на русском языке</string>
    <string name="english_cv">Your resume will be created in English</string>
    <string name="more_text">But You need to reduce the text amount</string>
    <string name="apps_are_not_installed_to_send_mail">No application installed to send e-mail</string>
</resources>
