<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/job1_ll"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jobs2"
        android:textColor="@color/hr24_blue"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:textSize="18sp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/profile_edittext"
                android:text="@string/job_period_hint"
                android:layout_marginTop="@dimen/spacing_normal_16"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/job_period1"
                    style="@style/profile_edittext"
                    android:hint="@string/job_period"
                    android:maxLength="25"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                style="@style/profile_edittext"
                android:text="@string/company_title_hint"
                android:layout_marginTop="@dimen/spacing_normal_16"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/company_title1"
                    style="@style/profile_edittext"
                    android:hint="@string/company_title"
                    android:maxLength="30"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                style="@style/profile_edittext"
                android:text="@string/job_title_hint"
                android:layout_marginTop="@dimen/spacing_normal_16"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/job_title1"
                    style="@style/profile_edittext"
                    android:hint="@string/job_title"
                    android:maxLength="50"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/profile_edittext"
        android:text="@string/jb_duty_hint"
        android:layout_marginTop="@dimen/spacing_normal_16"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/job_duty1"
            style="@style/profile_edittext"
            android:hint="@string/job_duty"
            android:maxLength="100"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/gray_light"
            android:textColorHint="@color/gray"
            android:maxLines="2" />

    </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/job_3_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_add" />

    <Button
        android:id="@+id/job_2_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_remove" />


</LinearLayout>