<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/job2_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:text="@string/jobs3"
        android:textColor="@color/hr24_blue"
        android:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/profile_edittext"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="@string/job_period_hint" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/job_period2"
                    style="@style/profile_edittext"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/job_period"
                    android:maxLength="25"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/profile_edittext"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="@string/company_title_hint" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/company_title2"
                    style="@style/profile_edittext"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/company_title"
                    android:maxLength="100"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/profile_edittext"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="@string/job_title_hint" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/job_title2"
                    style="@style/profile_edittext"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/job_title"
                    android:maxLength="100"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                style="@style/profile_edittext"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="@string/jb_duty_hint" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/job_duty2"
                    style="@style/profile_edittext"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/job_duty"
                    android:maxLength="100"
                    android:maxLines="2"
                    android:textColor="@color/gray_light"
                    android:textColorHint="@color/gray" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/job_3_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_remove" />


</LinearLayout>
