<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/button_placeholder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:visibility="invisible">

    <Button
        style="@style/profile_button"
        android:layout_marginRight="1dp"
        android:drawableLeft="@drawable/ic_insert_drive_file_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/create_pdf"
        android:visibility="invisible" />

    <Button
        style="@style/profile_button"
        android:layout_marginRight="1dp"
        android:drawableLeft="@drawable/ic_visibility_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/view"
        android:visibility="invisible" />

    <Button
        style="@style/profile_button"
        android:drawableLeft="@drawable/ic_shopping_basket_white_24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/unblock"
        android:visibility="invisible" />

    <Button
        style="@style/profile_button"
        android:drawableLeft="@drawable/ic_share_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sharePdf"
        android:visibility="invisible" />

</LinearLayout>
